--- a/hangman.css
+++ b/hangman.css
@@ -14,7 +14,18 @@ h5 {
     margin-top: 30px;
 }
 
+h4 {
+    margin-top: 20px;
+}
+
+h2 {
+    font-size: 130;
+    font-weight: bold;
+    margin-top: 50px;
+}
+
 img {
     height: 140px;
+    margin-top: 25px;
     width: 220px;
 }
