--- a/public/styles.css
+++ b/public/styles.css
@@ -32,7 +32,9 @@
     background-color: lightcyan;
     height: 350px;
     padding: 15px;
+    text-align: center;
 }
+
 
 #featured img {
     height: 150px;
@@ -116,4 +118,63 @@ input {
     margin-left: 3%;
     margin-right: 3%;
     
+}
+
+@media screen and (max-width: 980px) {
+    body {
+        background-color: blue;
+    }
+
+    #main p {
+        
+        width: 380px;
+       
+    }
+
+  
+}
+
+@media screen and (max-width: 868px) {
+
+    body {
+        background-color: pink;
+    }
+
+    #featured img {
+        height: 80px;
+        margin-right: 15px; 
+        width: 80px;
+    }
+
+    #featured p {
+        width: 125px;
+    }
+
+    #main p {
+        
+        width: 330px;
+       
+    }
+
+    
+}
+
+@media screen and (max-width: 640px) {
+
+    body {background-color: green;}
+
+    #main {
+        height: 700px;
+        text-align: center;
+    }
+
+    #main img {
+        height: 85px;
+        
+    }
+
+    #main p {
+        position: static;
+        width: 80%;
+    }
 }
